<resources>
    <string name="app_name">GetYourGame</string>
    <string name="app_id">1156759667671820</string>

    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_preferencia_usuario">Preferências do Usuário</string>
    <string name="title_activity_cadastro">Cadastro de Usuário</string>
    <string name="action_settings">Settings</string>
    <string name="action_meu_perfil">Meu Perfil</string>
    <string name="action_multiple_fotos">Foto</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_carrega_cadastros">CarregaCadastros</string>
    <string name="title_activity_lista_usuario_jogo">ListaUsuarioJogo</string>
    <string name="title_activity_lista_usuario">ListaUsuario</string>
    <string name="title_activity_lista_jogo">ListaJogo</string>
    <string name="title_activity_interesse">Interesse</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_interesse_tab">InteresseTab</string>
    <string name="title_activity_teste_multiple_images">testeMultipleImages</string>
    <string name="title_activity_oportunidades">Oportunidades</string>
    <string name="title_activity_iniciar_transacao">IniciarTransacao</string>
    <string name="title_activity_contatos">Contatos</string>
    <string name="title_activity_contatos_endereco">ContatosEndereco</string>
    <string name="title_activity_contatos_telefone">ContatosTelefone</string>
    <string name="title_activity_lista_transacao">ListaTransacao</string>
    <string name="title_activity_lista_transacao_tab">ListaTransacaoTab</string>
    <string name="title_activity_transacao">Transacao</string>
    <string name="title_activity_tela_jogo">Jogo</string>
    <string name="title_activity_carrega_foto_usuario">Foto do Usuário</string>


    <string name="aguardando">Aguardando o outro usuário...</string>
    <string name="alerta_transacao">Obs: O GetYourGame não se responsabiliza pela veracidade das informações aqui detalhadas ou pelo não recebimento do pagamento/produto.</string>
    <string name="avaliacao">AVALIAÇÃO</string>
    <string name="avaliacoes">VER AVALIAÇÕES RECEBIDAS</string>
    <string name="avaliar">Para avaliar, toque em uma opção e coloque uma observação:</string>
    <string name="avancar">Avançar</string>
    <string name="bairro">Bairro</string>
    <string name="buscar">Buscar</string>
    <string name="cadastrar"><u>Cadastrar-se</u></string>
    <string name="cadastrar_interesse">Cadastrar interesse</string>
    <string name="cadastro">Cadastro</string>
    <string name="cancelar_transacao">Cancelar Transação</string>
    <string name="carrega_foto">Carregar Foto</string>
    <string name="carrega_foto2"><u>Carregar Foto</u></string>
    <string name="cep">Cep</string>
    <string name="cidade">Cidade</string>
    <string name="complemento">Complemento</string>
    <string name="compra">Compra</string>
    <string name="confirmarSenha">Confirmar senha</string>
    <string name="contato">Contato</string>
    <string name="ddd">DDD</string>
    <string name="distancia">Distância considerada(km²):</string>
    <string name="distanciaProgresso">0</string>
    <string name="email">E-mail</string>
    <string name="entrar">Entrar</string>
    <string name="enviar_transacao">Produto/Pagamento Enviado</string>
    <string name="escreva_aqui">Escreva aqui</string>
    <string name="estado_jogo">Estado do Jogo:</string>
    <string name="estado_jogo_desejado">Estado desejado do Jogo:</string>
    <string name="fotos">Fotos:</string>
    <string name="gps">Permite GPS:</string>
    <string name="iniciar_transacao">INICIAR TRANSAÇÃO</string>
    <string name="interesses">Interesses</string>
    <string name="intervalo_preco">Intervalo de preço desejado (R$)</string>
    <string name="jogo">Jogo</string>
    <string name="jogos">Jogos que o usuário possui:</string>
    <string name="jogoDesejado">Jogo desejado</string>
    <string name="jogoOfertado">Jogo ofertado</string>
    <string name="login">Login</string>
    <string name="logradouro">Logradouro</string>
    <string name="metodo_envio_padrao">Método de envio padrão:</string>
    <string name="metodo_envio">Método de envio desejado:</string>
    <string name="nenhum_resultado">Nenhum resultado encontrado!</string>
    <string name="nome">Nome</string>
    <string name="numero">Nro</string>
    <string name="observacao">Observação:</string>
    <string name="ok">OK</string>
    <string name="plataforma">Plataforma</string>
    <string name="plataformas">Plataformas:</string>
    <string name="plataformaDesejada">Plataforma desejada</string>
    <string name="plataformaOfertada">Plataforma ofertada</string>
    <string name="preco">Preço (R$)</string>
    <string name="precoFinal">Preço Final</string>
    <string name="precoInicial">Preço Inicial</string>
    <string name="preferencias">Preferências</string>
    <string name="recusar_transacao">RECUSAR TRANSAÇÃO</string>
    <string name="salvar">Salvar</string>
    <string name="selecionar">(Selecionar)</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="troca">Troca</string>
    <string name="uf">UF</string>
    <string name="usuarios">Usuários que possuem:</string>
    <string name="venda">Venda</string>
    <string name="title_activity_tela_usuario">TelaUsuario</string>
    <string name="title_activity_avaliar">Avaliar</string>
    <string name="title_activity_avaliacao">Avaliacao</string>
    <string name="title_activity_contato_transacao">ContatoTransacao</string>
    <string name="title_activity_lista_interesse">ListaInteresse</string>
    <string name="title_activity_lista_interesse_tab">ListaInteresseTab</string>

</resources>
