<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borda"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.getyourgame.Interesse">
    <!--android:layout_marginTop="155dp"-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvSelecionaJogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecionar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorSecundary"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvPlataforma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/plataforma"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spPlataforma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvEstadoJogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/estado_jogo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spEstadoJogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fotos"
                android:id="@+id/tvUploadFotoTroca"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/llCarregaFotoTroca"
                android:background="@drawable/borda2">

                <ViewSwitcher
                    android:id="@+id/viewSwitcherTroca"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" >

                    <GridView
                        android:id="@+id/gridGalleryTroca"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginLeft="-10dp"
                        android:layout_marginRight="-10dp"
                        android:layout_marginTop="-10dp"
                        android:horizontalSpacing="-15dp"
                        android:numColumns="3"
                        android:padding="0dp"
                        android:verticalSpacing="-15dp"
                        tools:listitem="@layout/gallery_item" >
                    </GridView>

                </ViewSwitcher>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGalleryPickMulTroca"
                    android:text="@string/carrega_foto2"
                    style="@style/botaoBranco"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvJogoDesejado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jogoDesejado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvSelecionaJogoDesejado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecionar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorSecundary"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvPlataformaDesejada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/plataformaDesejada"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spPlataformaDesejada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btSalvarInteresse"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:text="salvar interesse" />

</RelativeLayout>
