<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.getyourgame.Interesse"
    android:background="@drawable/borda">
    <!--android:layout_marginTop="155dp"-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/jogo"
                android:id="@+id/tvJogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/selecionar"
                android:id="@+id/tvSelecionaJogo"
                android:textStyle="italic"
                android:textColor="@color/colorSecundary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/plataforma"
                android:id="@+id/tvPlataforma"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spPlataforma" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/estado_jogo"
                android:id="@+id/tvEstadoJogo"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spEstadoJogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/preco"
                android:id="@+id/tvPreco"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etPreco" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fotos"
                android:id="@+id/tvUploadFoto"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/borda2">

                <ViewSwitcher
                    android:id="@+id/viewSwitcher"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" >

                    <GridView
                        android:id="@+id/gridGallery"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginLeft="-10dp"
                        android:layout_marginRight="-10dp"
                        android:layout_marginTop="-10dp"
                        android:horizontalSpacing="-15dp"
                        android:numColumns="3"
                        android:padding="0dp"
                        android:verticalSpacing="-15dp"
                        tools:listitem="@layout/gallery_item" >
                    </GridView>

                </ViewSwitcher>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGalleryPickMul"
                    android:text="@string/carrega_foto2"
                    style="@style/botaoBranco"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="salvar interesse"
        android:id="@+id/btSalvarInteresse"
        android:layout_gravity="center_horizontal"
        style="@style/botao"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
