<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.getyourgame.Avaliar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/tvAVAjuda"
            android:text="@string/avaliar"
            android:background="@null"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPositivo">

                <ImageView
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:id="@+id/ivAVPositivo"
                    android:src="@drawable/thumbs_up"/>
            </RelativeLayout>

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutNegativo">

                <ImageView
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:id="@+id/ivAVNegativo"
                    android:src="@drawable/thumbs_down"/>
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/tvAVObservacao"
            android:text="@string/observacao"
            android:layout_marginTop="40dp"
            android:background="@null"/>

        <EditText
            android:id="@+id/etAVObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/escreva_aqui"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:id="@+id/btAVSalvar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        style="@style/botao" />

</RelativeLayout>
